[gd_scene load_steps=8 format=2]

[ext_resource path="res://Example Mod/ModMenu/menu/ExampleMod_SettingsLayer.gd" type="Script" id=1]
[ext_resource path="res://Example Mod/ModMenu/menu/ExampleMod_SettingsHandle.gd" type="Script" id=3]
[ext_resource path="res://hud/TabHintContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/MenuTheme.tres" type="Theme" id=7]
[ext_resource path="res://menu/PanelWithHugeShadow.tres" type="StyleBox" id=8]
[ext_resource path="res://menu/TabsWithGamepadControl.gd" type="Script" id=10]
[ext_resource path="res://menu/sfx/PlaySoundsOnTheseButtons.tscn" type="PackedScene" id=11]

[node name="Example Mod Menu" type="Popup"]
margin_left = -400.0
margin_right = 160.0
margin_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 750 )
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 7 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="NoMargins" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlaySoundsOnTheseButtons" parent="NoMargins" instance=ExtResource( 11 )]

[node name="CenterContainer" type="CenterContainer" parent="NoMargins"]
margin_right = 1070.0
margin_bottom = 750.0
rect_min_size = Vector2( 800, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabHintContainer" parent="NoMargins/CenterContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 17.0
margin_right = 1070.0
margin_bottom = 733.0
rect_min_size = Vector2( 1070, 716 )
size_flags_horizontal = 4

[node name="MarginContainer" parent="NoMargins/CenterContainer/TabHintContainer" index="0"]
margin_right = 1070.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 32 )
custom_constants/margin_right = -80
custom_constants/margin_left = -80

[node name="HBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer" index="0"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = -80.0
margin_right = 1150.0
margin_bottom = 43.0
size_flags_vertical = 3

[node name="Right" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer/HBoxContainer" index="0"]
margin_bottom = 39.0

[node name="Label" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer/HBoxContainer" index="1"]
margin_top = 0.0
margin_right = 1150.0
margin_bottom = 39.0

[node name="Left" parent="NoMargins/CenterContainer/TabHintContainer/MarginContainer/HBoxContainer" index="2"]
margin_left = 1150.0
margin_right = 1230.0
margin_bottom = 39.0

[node name="TabsWithGamepadControl" type="TabContainer" parent="NoMargins/CenterContainer/TabHintContainer"]
show_behind_parent = true
margin_right = 1070.0
margin_bottom = 716.0
rect_min_size = Vector2( 0, 716 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )
use_hidden_tabs_for_min_size = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXAMPLE_MAIN_TOGGLES" type="Tabs" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 50.0
margin_right = -1.0
margin_bottom = -1.0

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/MarginContainer"]
margin_top = 16.0
margin_right = 1068.0
margin_bottom = 617.0
custom_constants/separation = 6

[node name="addEquipment" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_right = 1068.0
margin_bottom = 41.0
hint_tooltip = "SETTINGS_ADD_EQUIPMENT_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_EQUIPMENT"
align = 1
script = ExtResource( 3 )

[node name="addEvents" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 1068.0
margin_bottom = 88.0
hint_tooltip = "SETTINGS_ADD_EVENTS_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_EVENTS"
align = 1
script = ExtResource( 3 )
setting = "addEvents"

[node name="addAgenda" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 1068.0
margin_bottom = 135.0
hint_tooltip = "SETTINGS_ADD_AGENDAS_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_AGENDAS"
align = 1
script = ExtResource( 3 )
setting = "addAgenda"

[node name="Control" type="Control" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/Control"]
margin_left = 7.0
margin_top = -55.0
margin_right = 341.0
margin_bottom = -11.0
focus_neighbour_right = NodePath("../Cancel")
text = "SETTINGS_SAVE"

[node name="Cancel" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -367.0
margin_top = -55.0
margin_right = -11.0
margin_bottom = -11.0
focus_neighbour_left = NodePath("../Save")
text = "SETTINGS_CANCEL"

[node name="EXAMPLE_EVENT_TOGGLES" type="Tabs" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 50.0
margin_right = -1.0
margin_bottom = -1.0

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/MarginContainer"]
margin_top = 16.0
margin_right = 1068.0
margin_bottom = 617.0
custom_constants/separation = 6

[node name="addDerelicts" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/MarginContainer/VBoxContainer"]
margin_right = 1068.0
margin_bottom = 41.0
hint_tooltip = "SETTINGS_ADD_DERELICTS_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_DERELICTS"
align = 1
script = ExtResource( 3 )
setting = "addDerelicts"
section = "eventToggles"

[node name="addNewNPCMiners" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 1068.0
margin_bottom = 88.0
hint_tooltip = "SETTINGS_ADD_NEW_NPCS_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_NEW_NPCS"
align = 1
script = ExtResource( 3 )
setting = "addNewNPCMiners"
section = "eventToggles"

[node name="addHabitatUnderConstruction" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 1068.0
margin_bottom = 135.0
hint_tooltip = "SETTINGS_ADD_HABITAT_UNDER_CONSTRUCTION_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_HABITAT_UNDER_CONSTRUCTION"
align = 1
script = ExtResource( 3 )
setting = "addHabitatUnderConstruction"
section = "eventToggles"

[node name="Control" type="Control" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/Control"]
margin_left = 7.0
margin_top = -55.0
margin_right = 341.0
margin_bottom = -11.0
focus_neighbour_right = NodePath("../Cancel")
text = "SETTINGS_SAVE"

[node name="Cancel" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -367.0
margin_top = -55.0
margin_right = -11.0
margin_bottom = -11.0
focus_neighbour_left = NodePath("../Save")
text = "SETTINGS_CANCEL"

[node name="EXAMPLE_AGENDA_TOGGLES" type="Tabs" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 50.0
margin_right = -1.0
margin_bottom = -1.0

[node name="MarginContainer" type="MarginContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 16
custom_constants/margin_left = 0
custom_constants/margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES/MarginContainer"]
margin_top = 16.0
margin_right = 1068.0
margin_bottom = 617.0
custom_constants/separation = 6

[node name="addHistorian" type="CheckButton" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES/MarginContainer/VBoxContainer"]
margin_right = 1068.0
margin_bottom = 41.0
hint_tooltip = "SETTINGS_ADD_HISTORIAN_AGENDA_TOOLTIP"
size_flags_horizontal = 3
text = "SETTINGS_ADD_HISTORIAN_AGENDA"
align = 1
script = ExtResource( 3 )
setting = "addHistorian"
section = "agendaToggles"

[node name="Control" type="Control" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES/Control"]
margin_left = 7.0
margin_top = -55.0
margin_right = 341.0
margin_bottom = -11.0
focus_neighbour_right = NodePath("../Cancel")
text = "SETTINGS_SAVE"

[node name="Cancel" type="Button" parent="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -367.0
margin_top = -55.0
margin_right = -11.0
margin_bottom = -11.0
focus_neighbour_left = NodePath("../Save")
text = "SETTINGS_CANCEL"

[connection signal="about_to_show" from="." to="." method="_on_ExampleMod_about_to_show"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/Control/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_MAIN_TOGGLES/Control/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/Control/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_EVENT_TOGGLES/Control/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES/Control/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="NoMargins/CenterContainer/TabHintContainer/TabsWithGamepadControl/EXAMPLE_AGENDA_TOGGLES/Control/Cancel" to="." method="_on_Cancel_pressed"]

[editable path="NoMargins/CenterContainer/TabHintContainer"]
